ingress-lab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: www.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: www
            port: 
              number: 80
  - host: www.example.com
    http:
      paths:
      - pathType: Exact
        path: /admin
        backend:
          service:
            name: admin
            port: 
              number: 80
  - host: api.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api
            port: 
              number: 80
